--- a/package.json
+++ b/package.json
@@ -11,9 +11,16 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@fontsource/beth-ellen": "^4.5.7",
+    "@fontsource/ibarra-real-nova": "^4.5.11",
+    "@fontsource/inter": "^4.5.15",
+    "@fontsource/jost": "^4.5.13",
+    "@fontsource/julius-sans-one": "^4.5.10",
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.7",
+    "@react-buddy/ide-toolbox": "^2.3.1",
+    "@react-buddy/palette-mui": "^5.0.1",
     "axios": "^1.3.2",
     "classnames": "^2.3.2",
     "gsap": "^3.11.4",
@@ -21,9 +28,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.41.2",
     "react-router-dom": "^6.6.2",
-    "react-transition-group": "^4.4.5",
-    "@react-buddy/ide-toolbox": "^2.3.1",
-    "@react-buddy/palette-mui": "^5.0.1"
+    "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
