--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.41.2",
     "react-router-dom": "^6.6.2",
-    "react-transition-group": "^4.4.5"
+    "react-transition-group": "^4.4.5",
+    "three": "^0.150.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
