--- a/package.json
+++ b/package.json
@@ -21,15 +21,21 @@
     "@mui/material": "^5.11.7",
     "@react-buddy/ide-toolbox": "^2.3.1",
     "@react-buddy/palette-mui": "^5.0.1",
+    "@react-three/drei": "^9.57.1",
+    "@react-three/fiber": "^8.11.10",
+    "@types/three": "^0.149.0",
     "axios": "^1.3.2",
     "classnames": "^2.3.2",
     "gsap": "^3.11.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.41.2",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^6.6.2",
     "react-transition-group": "^4.4.5",
-    "three": "^0.150.1"
+    "three": "^0.150.1",
+    "troika-3d-text": "^0.47.1",
+    "troika-three-text": "^0.47.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
