--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.6.2",
     "react-transition-group": "^4.4.5",
+    "svg-url-loader": "^8.0.0",
     "three": "^0.150.1",
     "troika-3d-text": "^0.47.1",
     "troika-three-text": "^0.47.1"
