--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@csstools/normalize.css": "^12.0.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@fontsource/beth-ellen": "^4.5.7",
@@ -33,6 +34,7 @@
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.6.2",
     "react-transition-group": "^4.4.5",
+    "sanitize.css": "^13.0.0",
     "svg-url-loader": "^8.0.0",
     "three": "^0.150.1",
     "troika-3d-text": "^0.47.1",
