--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "gsap": "^3.11.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.41.2",
+    "react-hook-form": "^7.47.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.6.2",
     "react-transition-group": "^4.4.5",
@@ -44,6 +44,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
+    "prettier": "3.0.3",
     "vite": "^4.0.0"
   }
 }
