--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@csstools/normalize.css": "^12.0.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@firebase/app": "^0.9.22",
+    "@firebase/functions": "^0.10.0",
     "@fontsource/beth-ellen": "^4.5.7",
     "@fontsource/ibarra-real-nova": "^4.5.11",
     "@fontsource/inter": "^4.5.15",
@@ -22,19 +24,25 @@
     "@mui/material": "^5.11.7",
     "@react-buddy/ide-toolbox": "^2.3.1",
     "@react-buddy/palette-mui": "^5.0.1",
+    "@react-email/components": "^0.0.7",
     "@react-three/drei": "^9.57.1",
     "@react-three/fiber": "^8.11.10",
     "@types/three": "^0.149.0",
     "axios": "^1.3.2",
     "classnames": "^2.3.2",
     "cors": "^2.8.5",
+    "firebase": "^10.5.2",
+    "firebase-admin": "^11.11.0",
+    "firebase-functions": "^4.4.1",
     "gsap": "^3.11.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-email": "^1.9.5",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.6.2",
     "react-transition-group": "^4.4.5",
+    "resend": "^1.1.0",
     "sanitize.css": "^13.0.0",
     "svg-url-loader": "^8.0.0",
     "three": "^0.150.1",
@@ -46,6 +54,7 @@
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
     "prettier": "3.0.3",
-    "vite": "^4.0.0"
+    "vite": "^4.5.0",
+    "vite-plugin-vue": "^0.0.1"
   }
 }
