--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "vite-rine",
   "private": true,
-  "version": "0.0.0",
+  "version": "2.1.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@csstools/normalize.css": "^12.0.0",
@@ -31,6 +32,7 @@
     "axios": "^1.3.2",
     "classnames": "^2.3.2",
     "cors": "^2.8.5",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "firebase": "^10.5.2",
     "firebase-admin": "^11.11.0",
     "firebase-functions": "^4.4.1",
@@ -53,8 +55,13 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
+    "eslint": "^8.53.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-only-warn": "^1.1.0",
+    "eslint-plugin-react": "^7.33.2",
     "prettier": "3.0.3",
     "vite": "^4.5.0",
+    "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-vue": "^0.0.1"
   }
 }
