--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@react-three/drei": "^9.57.1",
     "@react-three/fiber": "^8.11.10",
     "@types/three": "^0.149.0",
+    "@vercel/analytics": "^1.1.1",
+    "@vercel/speed-insights": "^1.0.2",
     "axios": "^1.3.2",
     "classnames": "^2.3.2",
     "cors": "^2.8.5",
