--- a/package.json
+++ b/package.json
@@ -6,23 +6,24 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "preview": "vite preview",
     "lint": "eslint ."
   },
   "dependencies": {
     "@csstools/normalize.css": "^12.0.0",
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@fontsource/beth-ellen": "^4.5.7",
     "@fontsource/ibarra-real-nova": "^4.5.11",
     "@fontsource/inter": "^4.5.15",
-    "@fontsource/jost": "^5.0.17",
+    "@fontsource/jost": "^4.5.13",
     "@fontsource/julius-sans-one": "^4.5.10",
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.11.0",
-    "@mui/material": "^5.15.12",
+    "@mui/material": "^5.11.7",
     "@react-buddy/ide-toolbox": "^2.3.1",
     "@react-buddy/palette-mui": "^5.0.1",
-    "@react-email/components": "^0.0.15",
+    "@react-email/components": "^0.0.7",
     "@react-three/drei": "^9.57.1",
     "@react-three/fiber": "^8.11.10",
     "@types/three": "^0.149.0",
